Exchnage: fix 'Select address' and 'Exchnage now' overlapping

--- a/shared/pages/Exchange/CustomDestAddress/CustomDestAddress.scss
+++ b/shared/pages/Exchange/CustomDestAddress/CustomDestAddress.scss
@@ -1,6 +1,5 @@
 .customDestination {
   position: relative;
-  height: 4em;
 
   &.--dark {
     color: white;
