--- a/shared/pages/Exchange/Exchange.scss
+++ b/shared/pages/Exchange/Exchange.scss
@@ -225,6 +225,7 @@
 }
 
 .rowBtn {
+  margin-top: 0.5em;
   display: flex;
   justify-content: space-around;
 }
